--- a/compositional_skills/writing/freeform/social_media/linkedin/bio/qna.yml
+++ b/compositional_skills/writing/freeform/social_media/linkedin/bio/qna.yml
@@ -25,7 +25,8 @@ seed_examples:
        Seeking roles where I can apply my expertise in DevOps alongside my growing knowledge in AI
        and MLOps to drive innovation,solve complex challenges, and contribute to cutting-edge projects
        that are shaping the future of technology.
-      Let's connect and explore opportunities to collaborate on exciting ventures at the intersection of DevOps and AI/MLOps!
+      Let's connect and explore opportunities to collaborate on exciting ventures at the intersection
+       of DevOps and AI/MLOps!
     question: >
       Help me draft a LinkedIn Bio for me. I am an experienced devops
       professional aspiring to transition my career in AI and MLOPs.
