--- a/knowledge/biology/mitochondrion/qna.yaml
+++ b/knowledge/biology/mitochondrion/qna.yaml
@@ -1,20 +1,23 @@
 created_by: Charles McCleland
 domain: biology
 seed_examples:
-- answer: A mitochondrion (/ˌmaɪtəˈkɒndriən/;[1] pl.: mitochondria) is an organelle found in the cells of most eukaryotes, such as animals, plants and fungi.
+- answer: A mitochondrion is an organelle found in the cells of most eukaryotes, such as animals, plants and fungi.
   question: What are Mitochondria?
 - answer: They were discovered by Albert von Kölliker in 1857
   question: Who discovered Mitochondria?
 - answer: Some cells in some multicellular organisms lack mitochondria (for example, mature mammalian red blood cells).
   question: Do all cells have mitochondria?
-- answer: Mitochondria have a double membrane structure and use aerobic respiration to generate adenosine triphosphate (ATP), which is used throughout the cell as a source of chemical energy.
-  question: What are the physical characteristics 
-- answer: The mitochondrion is popularly nicknamed the "powerhouse of the cell", a phrase coined by Philip Siekevitz in a 1957 article of the same name.
+- answer: Mitochondria have a double membrane structure and use aerobic respiration to generate adenosine |
+triphosphate (ATP), which is used throughout the cell as a source of chemical energy.
+  question: What are the physical characteristics
+- answer: The mitochondrion is popularly nicknamed the "powerhouse of the cell", a phrase coined by Philip |
+Siekevitz in a 1957 article of the same name.
   question: What is a good way to describe what mitochondria do?
-- answer: Although most of a eukaryotic cell's DNA is contained in the cell nucleus, the mitochondrion has its own genome ("mitogenome") that is substantially similar to bacterial genomes.
+- answer: Although most of a eukaryotic cell's DNA is contained in the cell nucleus, the mitochondrion has |
+its own genome ("mitogenome") that is substantially similar to bacterial genomes.
   question: Does mtochondria share the host cell's DNA?
 task_description: 'This is a set of questions and ansswers to build the model's knowledge of mitochondria'
-document: 
+document:
  repo: https://github.com/juliadenham/Summit_knowledge
  commit: 4923356d1675cedf74364e79ab97c786f3ead030
  patterns:
