Update qna.yaml - Added username
As requested

Signed-off-by: Chip McClelland <chip@mcclellands.org>

--- a/knowledge/biology/mitochondrion/qna.yaml
+++ b/knowledge/biology/mitochondrion/qna.yaml
@@ -1,4 +1,4 @@
-created_by: Charles McCleland
+created_by: chipmc
 domain: biology
 seed_examples:
 - answer: A mitochondrion is an organelle found in the cells of most eukaryotes, such as animals, plants and fungi.
